force-app/main/default/objects/clofor_com_cfs__PurchasingOrder__c/clofor_com_cfs__PurchasingOrder__c.object-meta.xml
<CustomObject>
    <label>購買注文</label>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>PURCHASING ORDER ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>