force-app/main/default/objects/clofor_com_cfs__PurchasingOrder__c/fields/clofor_com_cfs__ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContractNumber__c</fullName>
    <label>CONTRACT NUMBER</label>
    <length>50</length>
    <type>Text</type>
</CustomField>