force-app/main/default/objects/clofor_com_cfs__PurchasingOrder__c/fields/clofor_com_cfs__Detail__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Detail__c</fullName>
    <label>PURCHASING DETAIL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>