force-app/main/default/objects/clofor_com_cfs__PurchasingOrder__c/fields/clofor_com_cfs__InvoiceNumberFromVendor__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InvoiceNumberFromVendor__c</fullName>
    <label>INVOICE NUMBER FROM VENDOR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>