force-app/main/default/objects/clofor_com_cfs__PurchasingOrder__c/fields/clofor_com_cfs__InvoiceReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InvoiceReceivedDate__c</fullName>
    <label>PURCHASING INVOICE RECEIVED DATE</label>
    <type>Date</type>
</CustomField>