force-app/main/default/objects/clofor_com_cfs__PurchasingOrder__c/fields/clofor_com_cfs__PurchasingOrderName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PurchasingOrderName__c</fullName>
    <label>PURCHASING ORDER NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>