force-app/main/default/objects/clofor_com_cfs__PurchasingOrder__c/fields/clofor_com_cfs__TotalAmountInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountInclTaxLocal__c</fullName>
    <inlineHelpText>Roll-Up Sum of Amount of Purchasing include Tax(Local) in Purchasing Invoice Object.</inlineHelpText>
    <label>TOTAL PURCHASING AMOUNT INCL TAX(LOCAL)</label>
    <summarizedField>clofor_com_cfs__PurchasingInvoice__c.clofor_com_cfs__AmountIncludedTaxLocal__c</summarizedField>
    <summaryFilterItems>
        <field>clofor_com_cfs__PurchasingInvoice__c.clofor_com_cfs__Currency__c</field>
        <operation>notEqual</operation>
        <value>USD</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__PurchasingInvoice__c.clofor_com_cfs__PurchasingOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>