force-app/main/default/objects/clofor_com_cfs__PurchasingOrder__c/fields/clofor_com_cfs__TotalPaidAmount__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalPaidAmount__c</fullName>
    <inlineHelpText>Roll-up Sum of Total Amount Paid-Purchasing(USD) in Purchasing Invoice Object.</inlineHelpText>
    <label>TOTAL AMOUNT PAID-PURCHASING(USD)</label>
    <summarizedField>clofor_com_cfs__PurchasingInvoice__c.clofor_com_cfs__PaidAmount__c</summarizedField>
    <summaryFilterItems>
        <field>clofor_com_cfs__PurchasingInvoice__c.clofor_com_cfs__Currency__c</field>
        <operation>equals</operation>
        <value>USD</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__PurchasingInvoice__c.clofor_com_cfs__PurchasingOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>