force-app/main/default/objects/clofor_com_cfs__PurchasingOrder__c/fields/clofor_com_cfs__TotalPOAmountIncltaxText__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalPOAmountIncltaxText__c</fullName>
    <label>TOTAL P/O AMOUNT INCL TAX(LOCAL)-TEXT</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>