force-app/main/default/objects/clofor_com_cfs__PurchasingOrder__c/fields/clofor_com_cfs__TotalUnpaidBalanceLocalText__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalUnpaidBalanceLocalText__c</fullName>
    <label>TOTAL UNPAID PURCHASING BAL(LOCAL)-TEXT</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>