force-app/main/default/objects/clofor_com_cfs__PurchasingOrder__c/recordTypes/clofor_com_cfs__LockedPurchasingOrder.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__LockedPurchasingOrder</fullName>
    <active>true</active>
    <label>Locked Purchasing Order</label>
</RecordType>