force-app/main/default/objects/clofor_com_cfs__PurchasingOrder__c/recordTypes/clofor_com_cfs__PurchasingOrder.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__PurchasingOrder</fullName>
    <active>true</active>
    <label>Purchasing Order</label>
</RecordType>