force-app/main/default/objects/clofor_com_cfs__PurchasingOrder__c/validationRules/clofor_com_cfs__DUE_DATE_later_than_RECEIVED_DAT.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__DUE_DATE_later_than_RECEIVED_DAT</fullName>
    <active>true</active>
    <errorConditionFormula>clofor_com_cfs__InvoiceReceivedDate__c  &gt;  clofor_com_cfs__PaymentDueDate__c</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__PaymentDueDate__c</errorDisplayField>
    <errorMessage>PAYMENT DUE DATE must be later than PURCHASING INVOICE RECEIVED DATE.</errorMessage>
</ValidationRule>